--- a/modules/ecommerce/ecommerce-intro.hbs
+++ b/modules/ecommerce/ecommerce-intro.hbs
@@ -12,7 +12,7 @@
                   <table border="0" cellpadding="0" cellspacing="0" width="100%">
                     <tr>
                       <td style="padding: 0 0 4px 0; color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 20px; font-weight: normal; line-height: 30px;" align="left">
-                        Hey @matty_h
+                        Hey John!
                       </td>
                     </tr>
                     <tr>
