--- a/modules/misc/view-in-browser.hbs
+++ b/modules/misc/view-in-browser.hbs
@@ -12,7 +12,7 @@
                   <table border="0" cellpadding="0" cellspacing="0" width="100%">
                     <tr>
                       <td style="color: #333333; font-family: Helvetica, Arial, sans-serif; font-size: 14px; font-weight: normal; line-height: 21px;" align="center">
-                        <a style="color: #333333; text-decoration: none;" href="http://www.matt-harris.net">If you'd like, you can view this in a browser.</a>
+                        <a style="color: #333333; text-decoration: none;" href="ADDLINK">If you'd like, you can view this in a browser.</a>
                       </td>
                     </tr>
                   </table>
